<resources>
    <string name="app_name">Guess My Song</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="facebook_app_id">713668476248470</string>
    <string name="fb_login_protocol_scheme">fb713668476248470</string>
    <string name="start">Start</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="let_s_sing">Let\'s sing!</string>
    <string name="achievements">Achievements</string>
    <string name="level">Level:</string>
    <string name="single_player">Single Player</string>
    <string name="play_with_friends">Play with friends</string>
    <string name="profile">Profile</string>
</resources>