<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6"
    tools:context="com.example.guessmysong.MainMenu">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:layout_marginTop="25dp"
        android:text="@string/let_s_sing"
        android:textAlignment="inherit"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
         />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/facebookLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/mic"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/StartButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/facebookLogo"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:onClick="startOnClick"
        app:cardBackgroundColor="#11000000"
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/start"
                android:textColor="#fff"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_action_start" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ProfileButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/StartButton"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="profileOnClick"
        app:cardBackgroundColor="#11000000"
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/profile"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/AchievementsButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ProfileButton"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="achievementsOnClick"
        app:cardBackgroundColor="#11000000"
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/achievements"
                android:textColor="#fff"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_action_achievement" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/OptionsButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/AchievementsButton"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="optionsOnClick"
        app:cardBackgroundColor="#11000000"
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/options"
                android:textColor="#fff"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_action_settings_white" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ExitButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/OptionsButton"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="exitOnClick"
        app:cardBackgroundColor="#11000000"
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/exit"
                android:textColor="#fff"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_action_logout" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>